@@ -1,3 +1,10 @@
+2008-05-24  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_dirwrite.c: Fix potential memory leak writing large double
+	tags. 
+
+	* tif_dirread.c: Fix unchecked malloc result.
+
 2008-01-30  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* tif_fax3.c: Make find0span() and find1span() non-inline to
